# FreeSnaky

./: CHANGELOG.md  FreeSnaky.cabal  README.md  default.nix  flake.nix  hie.yaml  update-nix.sh
app/: Main.hs
src/: Cli.hs  Client.hs  LeaderBoard.hs  Server.hs  Snake.hs  Tui.hs
