cabal-version:      2.4
name:               FreeSnaky
version:            0.1.0.0
homepage:           https://github.com/morucci/FreeSnaky#README.md
bug-reports:        https://github.com/morucci/FreeSnaky/issues
synopsis:           Free Snaky
description:        Help Snaky to be free
license-file:       LICENSE
author:             Fabien Boucher
maintainer:         fboucher@redhat.com
copyright:          2022 Fabien Boucher
category:           Game
extra-source-files:
    CHANGELOG.md
    README.md

common common-options
    default-language: Haskell2010
    default-extensions: LambdaCase
                      , NoImplicitPrelude
                      , OverloadedStrings
                      , RecordWildCards
                      , NamedFieldPuns
                      , DeriveGeneric
    ghc-options:        -Wall

library
    import:           common-options
    exposed-modules:  Snake
                    , Tui
                    , Server
                    , Client
    build-depends:    base          ^>=4.14.3.0
                    , aeson
                    , async
                    , relude
                    , brick
                    , vty
                    , random
                    , network
                    , say
                    , websockets
    hs-source-dirs:   src

executable FreeSnaky
    import:           common-options
    main-is:          Main.hs

    build-depends:    base ^>=4.14.3.0
                    , relude ^>=1.0.0.1
                    , FreeSnaky

    hs-source-dirs:   app
    default-language: Haskell2010
