cabal-version:      2.4
name:               FreeSnaky
version:            0.1.0.0
homepage:           https://github.com/morucci/FreeSnaky#README.md
bug-reports:        https://github.com/morucci/FreeSnaky/issues
synopsis:           Free Snaky
description:        Help Snaky to be free
license-file:       LICENSE
author:             Fabien Boucher
maintainer:         fboucher@redhat.com
copyright:          2022 Fabien Boucher
category:           Game
extra-source-files:
    CHANGELOG.md
    README.md

common common-options
    default-language: Haskell2010
    default-extensions: LambdaCase
                      , NoImplicitPrelude
                      , OverloadedStrings
                      , RecordWildCards
                      , NamedFieldPuns
                      , DeriveGeneric
    ghc-options:      -Wall
                      -threaded

    build-depends:    base < 5
                    , fast-logger

library
    import:           common-options
    exposed-modules:  Snake
                    , Tui
                    , Server
                    , LeaderBoard
                    , Cli
    build-depends:    aeson
                    , async
                    , directory
                    , brick
                    , vty
                    , random
                    , network
                    , text
                    , time
                    , websockets
                    , witch
                    , optparse-generic
    hs-source-dirs:   src

executable FreeSnaky
    import:           common-options
    main-is:          Main.hs

    build-depends:    FreeSnaky

    hs-source-dirs:   app
    default-language: Haskell2010
